# EdgeML

./: .gitattributes  .gitignore  BonsaiIngestTest.cpp  BonsaiLocalDriver.cpp  BonsaiTrainDriver.cpp  CMakeLists.txt  CmakeNotes.txt  Comparison-Results.ipynb  Data1_Bonsai_HyperParams.txt  Data2_Bonsai_HyperParams.txt  License.txt  Makefile  NOTES  People.md  ProtoNNIngestTest.cpp  ProtoNNLocalDriver.cpp  ProtoNNLocalPredictor.cpp  ProtoNNPredictDriver.cpp  ProtoNNTrainDriver.cpp  Publications.md  README.md  README_BONSAI_OSS.md  README_BONSAI_TLC.md  README_PROTONN_OSS.ipynb  README_PROTONN_OSS.md  README_PROTONN_TLC.md  TODOs  ThirdPartyNotices.txt  _config.yml  citation.txt  config.mk  index.html  preds.csv  run_BonsaiPredict_usps10.sh  run_BonsaiTrain_usps10.bat  run_BonsaiTrain_usps10.sh  run_Bonsai_usps10.bat  run_Bonsai_usps10.sh  run_ProtoNNPredict_usps10.bat  run_ProtoNNPredict_usps10.sh  (+6 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Algorithms/: Bonsai.md  EMI-RNN.md  FastGRNN.md  ProtoNN.md  index.md
Applications/GesturePod/: README.md
Applications/Keyword-MXChip/: README.md
Applications/WakeWord-MXChip/: README.md  WakeWord-MXChip.ino
Applications/onComputer/: README.md
BonsaiTest/: CMakeLists.txt
Inverter_1_2017-03-30/: .~lock.Inverter_1_2017-03-30.csv#  Inverter_1_2017-03-30-BONSAI.csv  Inverter_1_2017-03-30.csv  Inverter_1_2017-04-11.tsv  Ppreds.csv  Prototypes-Ppreds.csv  T.npy  Untitled.ipynb  V.npy  W.npy  Z.npy  hyperParam.npy  list_dicts.pkl  test.npy  train.npy
Projects/: index.md
Projects/GesturePod/: index.md  instructable.md
Projects/WakeWord/: index.md  instructable.md
ProtoNNTest/: CMakeLists.txt
SeeDot/: FASTGRNN README.txt  README.md  SeeDot.sln  to do.txt
SeeDot/Predictor/: .gitignore  Arduino.cpp  Arduino.h  Predictor.vcxproj  Predictor.vcxproj.filters  bonsai.h  bonsai_fixed.cpp  bonsai_float.cpp  bonsai_float_model.h  datatypes.h  debug.cpp  lenet.h  lenet_fixed.cpp  lenet_float.cpp  lenet_float_model.h  library.cpp  library.h  library_fixed.cpp  library_fixed.h  library_float.cpp  library_float.h  main.cpp  model.h  model_fixed.h  model_float.h  predictors.h  profile.cpp  profile.h  protonn_fixed.cpp  protonn_float.cpp  seedot_fixed.cpp  seedot_fixed_model.h  seedot_float.cpp  vars_fixed.h  vars_float.h
SeeDot/Results/: Results.json  raw.txt
SeeDot/SeeDot/: Common.py  Compiler.py  Main.py  Predictor.py  SeeDot.py  SeeDot.pyproj  Type.py  Util.py  Writer.py
SeeDot/Streamer/: .gitignore  DeviceInterface.cs  Main.cs  Streamer.csproj
SeeDot/arduino/: Arduino.h  arduino.ino  config.h  library.h  predict.h
Tools/SeeDot/: README.md  SeeDot.py  compiler.py  predictor.py  seedot.py  type.py  util.py
_Blog/: Bonsai-Blog.md  FastGRNN-Blog-1.md  FastGRNN-Blog-2.md
_includes/: footer.html  head.html  header.html  macros.html
_layouts/: blogpost.html  default.html  instructable.html  landingpage.html  projects.html
applications/GesturePod/: README.md
applications/KWS_Phoneme/: README.md  data_pipe.py  kwscnn.py  train_classifier.py  train_phoneme.py  utils.py
applications/MSCRNN/: README.md
archive/: FastGRNN-Blog.md
c++/: README.md  run_BonsaiTrain_usps10.bat
c++/docs/: README_BONSAI_OSS.md  README_PROTONN_OSS.ipynb
c++/drivers/: CMakeLists.txt
c_reference/: Makefile  README.md  config.mk
c_reference/include/: classifier.h  conv1d.h  conv_convolution.h  dscnn.h  fastgrnn.h  fastrnn.h  lstm.h  maxpool.h  quantized_datatypes.h  quantized_fastgrnn.h  quantized_mbconv.h  utils.h  (+6 more)
cpp/: CMakeLists.txt  Makefile  README.md  run_BonsaiPredict_usps10.bat  run_ProtoNNPredict_usps10.sh  run_ProtoNNTrain_usps10.sh
cpp/docs/: README_BONSAI_OSS.md  README_BONSAI_TLC.md  README_PROTONN_TLC.md
cpp/drivers/Bonsai/: CMakeLists.txt
cpp/drivers/Bonsai/ingestTest/: BonsaiIngestTest.cpp
cpp/drivers/Bonsai/local/: BonsaiLocalDriver.cpp  CMakeLists.txt  Makefile
cpp/drivers/Bonsai/predictor/: Makefile
cpp/drivers/Bonsai/trainer/: BonsaiTrainDriver.cpp
cpp/drivers/ProtoNN/ingestTest/: ProtoNNIngestTest.cpp
cpp/drivers/ProtoNN/trainer/: CMakeLists.txt
cpp/eigen/: .hg_archival.txt
cpp/src/: CMakeLists.txt
cpp/src/Bonsai/: Bonsai.h  BonsaiFunctions.h  BonsaiIngestTest.cpp  BonsaiModel.cpp  BonsaiParams.cpp  BonsaiPredictor.cpp  BonsaiTrainer.cpp  Bonsai_Multiclass_export.cpp  CMakeLists.txt
cpp/src/ProtoNN/: CMakeLists.txt  ProtoNN.h  ProtoNNFunctions.cpp  ProtoNNFunctions.h  ProtoNNHyperParams.cpp  ProtoNNPredictor.cpp  ProtoNNTrainer.cpp  ProtoNN_Multiclass_export.cpp  cluster.h
cpp/src/common/: CMakeLists.txt  Data.cpp  Data.h  Makefile  goldfoil.cpp  goldfoil.h  logger.h  pre_processor.h  timer.cpp  utils.h
css/: landing.css  style.css
docs/: EMI-RNN.md  FastCells.md  README_BONSAI_OSS.md  README_BONSAI_TLC.md  README_PROTONN_OSS.ipynb  README_PROTONN_OSS.md  README_PROTONN_TLC.md
drivers/Bonsai/predictor/: BonsaiPredictDriver.cpp  CMakeLists.txt
edgeml/: README.md  utils.py
edgeml-tf/: README.md  requirements-cpu-tf.txt
edgeml_pytorch/: README.md  setup.py
fixed-point/: .gitignore  Compiler.sln  Main.py  README.md  ReadMe.md  fixed-point.ino  predict.h
landing/: algorithms.html  applications.html  background.html  citation.html  description.html  features.html  people_plug.html  tools.html  usecases.html
lib/Bonsai/: CMakeLists.txt  Makefile
lib/Bonsai/src/: BonsaiTrainer.cpp
lib/ProtoNN/: CMakeLists.txt  Makefile
lib/ProtoNN/src/: ProtoNNModel.cpp  ProtoNN_Multiclass_export.cpp
pytorch/: README.md  requirements-cpu.txt  requirements-gpu.txt  setup.py  setup_python.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Data.cpp  Data.h  blas_routines.cpp  blas_routines.h  goldfoil.cpp  goldfoil.h  logger.cpp  logger.h  metrics.cpp  metrics.h  mmaped.cpp  mmaped.h  par_utils.cpp  par_utils.h  pre_processor.h  timer.cpp  timer.h  utils.cpp  utils.h
test/: CMakeLists.txt
test/ProtoNNTest/: CMakeLists.txt
test/ProtoNNTest/src/: ProtoNNIngestTest.cpp
tf/: README.md  requirements-cpu.txt  requirements-gpu.txt  setup.py
tf2.0/: requirements-cpu.txt  requirements-gpu.txt
(+1033 files in other folders)
